normalizing headers, fixed to PUBLISHED status

--- a/communication_norms.adoc
+++ b/communication_norms.adoc
@@ -1,6 +1,8 @@
 = Communication Norms in Open Source Software Projects
 // Authors: Leslie Hawthorn <lhawthor@redhat.com>
 // Updated: 2020-10-29
+// Versions: 1.99
+// Status: PUBLISHED
 
 == Introduction
 
