--- a/presenting_tosw.adoc
+++ b/presenting_tosw.adoc
@@ -1,6 +1,8 @@
 = Presenting The Open Source Way
 // Author: Karsten Wade <quaid@iquaid.org>
 // Updated: 2020-11-03
+// Versions: 1.99
+// Status: PUBLISHED
 
 An English idiom says, "There is a method to my madness.".footnote:[From "Hamlet" by William Shakespeare, Act 2 Scene 2: Polonius (aside) "Though this be madness, yet there is method in `t"]
 Most of the time, the things we do make absolutely no sense to outside observers.
