Section files templated, some content, includes - This establishes the working template for section introduction files - It can be modified, across the board or case-by-case - Opening paragraph can by much longer, even sub-sections, if needed - The two common lists of "contains" and "useful for you if" are an idea for how to do the section intros, for a consistent and useful set of information readers will learn from. - These files have not been tested in an Asciidoctor build, such as for the level offset value; they also conflict with the includes in the preview-1.99 file.

--- a/attracting_users_section.adoc
+++ b/attracting_users_section.adoc
@@ -1,3 +1,27 @@
-. Attracting Users
-.. Basics of a project
-.. Driving adoption
+= Attracting Users
+// Author: Karsten Wade <kwade@redhat.com>
+// Updated: 2020-12-04
+// Version: 2.0
+// Status: DRAFT
+// :leveloffset: +1
+
+OPENING PARAGRAPH NARRATIVE TIE IN
+
+This section contains chapters that:
+
+* Concept one.
+* Concept two
+* Concept three.
+* Concept more.
+
+This section is useful for you if:
+
+* Need a thing
+* Want a thing
+* Have a thing
+* Looking for a thing
+* Liking a thing
+
+include::basics_of_a_project.adoc[]
+include::driving_adoption.adoc[]
+include::terminology_and_lexicon.adoc[]
