--- a/growing_contributors_section.adoc
+++ b/growing_contributors_section.adoc
@@ -1,9 +1,31 @@
-. Growing Contributors
-.. From users to contributors
-.. What is a contribution
-.. Getting organized
-.. Onboarding
-... Contributors from easyfix to experienced
-.. Legal and governance
-.. Community roles
-.. Migrating code
+= Growing Contributors
+// Author: Karsten Wade <kwade@redhat.com>
+// Updated: 2020-12-04
+// Version: 2.0
+// Status: DRAFT
+// :leveloffset: +1
+
+OPENING PARAGRAPH NARRATIVE TIE IN
+
+This section contains chapters that:
+
+* Concept one.
+* Concept two
+* Concept three.
+* Concept more.
+
+This section is useful for you if:
+
+* Need a thing
+* Want a thing
+* Have a thing
+* Looking for a thing
+* Liking a thing
+
+include::from_users_to_contributors.adoc[]
+include::what_is_a_contribution.adoc[]
+include::getting_organized.adoc[]
+include::onboarding.adoc[]
+include::community_governance.adoc[]
+include::community_roles.adoc[]
+include::migrating_code.adoc[]
