--- a/guiding_participants_section.adoc
+++ b/guiding_participants_section.adoc
@@ -1,3 +1,27 @@
-. Guiding participants
-.. What participants want
-.. How participants help the projects they love so much
+= Guiding participants
+// Author: Karsten Wade <kwade@redhat.com>
+// Updated: 2020-12-04
+// Version: 2.0
+// Status: DRAFT
+// :leveloffset: +1
+
+OPENING PARAGRAPH NARRATIVE TIE IN
+
+This section contains chapters that:
+
+* Concept one.
+* Concept two
+* Concept three.
+* Concept more.
+
+This section is useful for you if:
+
+* Need a thing
+* Want a thing
+* Have a thing
+* Looking for a thing
+* Liking a thing
+
+include::why_people_participate.adoc[]
+include::how_participants_help_the_projects_they_love_so_much.adoc[]
+
