--- a/introductions_section.adoc
+++ b/introductions_section.adoc
@@ -1,4 +1,29 @@
-. Introductions
-.. Community 101
-.. Quickstart checklist
-.. Terminology and lexicon
+= Getting Started
+// Author: Karsten Wade <kwade@redhat.com>
+// Updated: 2020-12-04
+// Version: 2.0
+// Status: DRAFT
+// :leveloffset: +1
+
+Wherever you are in your journey as an open source practitioner, it is always useful to undestand and pay attention to the basics.
+These basics include some of the types of _common knowledge_ that "everyone knows in the community", yet no one is sure how they learned it, and it's not always written down.
+The chapters in this section are good places to start for practioners of all levels.
+
+This section contains chapters that:
+
+* Introduce some core concepts around open source communities.
+* Outline steps you might take in starting an open source project.
+* Define key terms and words you will encounter throughout this guidebook.
+
+This section is useful for you if:
+
+* You are unsure where to start.
+* You want to read an overview of the steps of starting a new open source project.
+* You want to see what steps to take for growing strong community.
+* You are looking for the definition or more meaning about a term or word you encounter in this guidebook or in the open source world in general.
+* You like to read things from the beginning.
+
+include::community_101.adoc[]
+include::new_project_start_up_checklist.adoc[]
+include::terminology_and_lexicon.adoc[]
+
