--- a/measuring_success_section.adoc
+++ b/measuring_success_section.adoc
@@ -1,4 +1,27 @@
-. Measuring Success
-.. Defining healthy communities
-.. Developing a metrics plan
-.. Announcing software releases
+= Measuring Success
+// Author: Brian Proffitt <bkp@redhat.com>
+// Updated: 2020-12-04
+// Version: 2.0
+// Status: DRAFT
+// :leveloffset: +1
+
+OPENING PARAGRAPH(S) NARRATIVE TIE IN
+
+This section contains chapters that:
+
+* Concept one.
+* Concept two
+* Concept three.
+* Concept more.
+
+This section is useful for you if:
+
+* Need a thing
+* Want a thing
+* Have a thing
+* Looking for a thing
+* Liking a thing
+
+include::Guiding participants[]
+include::developing_a_metrics_plan.adoc[]
+include::announcing_software_releases.adoc[]
