--- a/references_and_cases_section.adoc
+++ b/references_and_cases_section.adoc
@@ -1,3 +1,26 @@
-. References and Case Studies
-.. References
-.. Case studies
+= References and Case Studies
+// Author: Karsten Wade <kwade@redhat.com>
+// Updated: 2020-12-04
+// Version: 2.0
+// Status: DRAFT
+// :leveloffset: +1
+
+OPENING PARAGRAPH NARRATIVE TIE IN
+
+This section contains chapters that:
+
+* Concept one.
+* Concept two
+* Concept three.
+* Concept more.
+
+This section is useful for you if:
+
+* Need a thing
+* Want a thing
+* Have a thing
+* Looking for a thing
+* Liking a thing
+
+include::references.adoc[]
+include::case_studies.adoc[]
