--- a/introductions_section.adoc
+++ b/introductions_section.adoc
@@ -5,7 +5,7 @@
 // Status: DRAFT
 // :leveloffset: +1
 
-Wherever you are in your journey as an open source practitioner, it is always useful to undestand and pay attention to the basics.
+Wherever you are in your journey as an open source practitioner, it is always useful to understand and pay attention to the basics.
 These basics include some of the types of _common knowledge_ that "everyone knows in the community", yet no one is sure how they learned it, and it's not always written down.
 The chapters in this section are good places to start for practioners of all levels.
 
