--- a/onboarding.adoc
+++ b/onboarding.adoc
@@ -77,7 +77,163 @@ Whether it's onboarding buddies, mentors, working groups, etc. you want to have 
 
 == Mentorship
 
+== Mentoring new contributors
 
+Part of starting, or growing, a successful open source community is designing the community to be sustainable.
+This means the project needs to be able to reliably, and repeatedly, bring in new people and help them become ongoing contributors.
+Let's talk about how mentoring new contributors is crucial to enabling a community to be sustainable.
+
+If this matches your projects's version of sustainable, then a mentoring program is absolutely crucial.
+It's at the center of how to take a project from "three people who know and do everything" to make it something many people can contribute to in a self-sustaining fashion.
+
+Self-sustainability is an important focus for a mentoring program.
+And don't think I went from "mentoring people" to "a mentoring program" by accident.
+Here's the argument:
+
+1. If we can agree that lowering the barriers for entry into a project is key to bringing in new people; and
+2. If we can agree that people coming into a new project benefit from having one or more people they feel permitted and even encouraged to ask questions and learn from; and
+3. If we can agree new people having lackluster or negative interactions with existing project members is likely to drive the new people away; and
+4. If we can agree that having a person (mentor, friend) for new people to turn to is a way to prevent the driving-away and especially prevent silent segfaults (people just disappearing with no explanation);
+5. Then we can see that doing mentoring with even a tiny bit of repeatable process support is going to yield better, more satisfying results than an ad-hoc process.
+
+Once you agree that an even a lightweight program is better than an ad-hoc process, we're going in the right direction.
+With this in mind, here are a few absolute must-have elements to include in your mentoring program.
+
+=== Written, iterative process
+
+Even if it's lightweight, write it down and give it an initial try.
+
+For that first e.g. six months, get a handful of volunteers to try out the program.
+This gives time to work out the kinks in processes, and to attract more mentors for when you make the program more prominent.
+
+When you have a process you have tried and tested once or twice, put up a "Mentoring" section on your project website and include links to all the elements of your mentoring program.
+
+Make sure people who have even the slightest inkling of getting involved in the project can look ahead and see how they are going to be taken care of as a new contributor.
+
+After each full mentoring period (refer to time commitment, below), conduct a retrospective to learn from the mentoring period and improve the process iteratively.
+
+It's not just promising there will be a map and directions, it is showing the actual map and idea of what the directions will be.
+
+=== Mentoring guidelines and a Code of Conduct for your mentors
+
+Even people who are very experienced at mentoring benefit from having guidelines for how to mentor and work with mentoring subjects (mentees), mentoring ethics, and so forth.
+
+I'm excited about this project I learned about recently, https://www.mentorship.guide/[an upstream guide to mentoring itself].You can use materials such as from that project to create the elements your mentoring program needs.
+
+Mentors have a special role of trust—the project trusts them to represent the community, and the mentees (mentoring subjects) trust the mentor to lead them down the right path.
+Mentors need to conduct themselves with an appropriate standard, and there needs to be a way to keep them accountable to that standard and report problems or abuses of conduct by mentors.
+Such a Code of Conduct needs to be visible up front and prominent for everyone looking at your mentoring program.
+
+Not having a Code of Conduct for your mentors, or making it hard to find, is a warning signal to potential new contributors that this project should be avoided.
+
+=== Mentors make mentors
+
+I've been thinking about this one a lot since https://events19.linuxfoundation.org/events/open-source-summit-europe-2019/program/schedule/[I gave a talk about it at Open Source Summit Europe in October].
+
+The key idea is that new mentors are made of people who have had positive mentoring experiences that also taught them "how to be a mentor."
+Your mentors should be thinking overall and in specific instances, How can I help this person be successful at mentoring other contributors?
+
+A new contributor who is mentored well can immediately turn around and offer similar mentoring lessons to other contributors, new and existing alike.
+
+Even if you are just answering a question for a new contributor, how you answer that question is where mentoring comes in.
+You can answer in such a way that this new contributor feels empowered to share their new-found knowledge.
+If they take in the lesson of not just what was conveyed but how it was conveyed, they carry this simple lesson of mentoring forward with their own interactions across the project.
+
+=== Easy norms for mentees
+
+Unlike your mentors, you want the fewest demands and lightest burdens for your mentees.
+
+This is information that should be prominent on your mentoring program webpages, and can cover:
+
+* In our project, here is how to find and/or approach a mentor.
+* What the work/effort commitment for a mentee is likely to be.
+* Clarify the relationship, e.g., a mentor is specifically not a friendship role; the mentoring may be time-bound (six months, etc.) or otherwise have a box once left means the mentoring has concluded; mentors are volunteers and deserve equal respect; mentors are held to a Code of Conduct that mentees should know and follow as well. And so forth.
+* What does a normal mentor/mentee relationship look like in this specific project.
+
+You are looking for a balance where mentees know what is expected of them, while leaving space for the mentor to help grow that understanding of project norms, from technical to cultural.
+
+=== Named person or group who leads the mentoring program
+
+For everything from people being stuck through to disappearing mentors to Code of Conduct violations, there needs to be a clear and obvious person or persons to contact.
+
+This contact information and its purpose should be prominent on your mentoring program webpages.
+
+This group will be one of the rare areas of your project that maintains privacy and a well-understood barrier to transparency for specific topics.
+Mentors need to be able to talk with other mentors to seek guidance; this group can provide that private space.
+It can also help with any sensitive matters that arise.
+
+The governance for this group or role needs to have a clear and short escalation path to the highest levels of project leadership.
+
+=== A reasonable time and effort commitment plan for mentors
+
+Mentoring relationships can last years or be completed in a weekend.
+Make a reasonable schedule, perhaps one that is tied to your release schedule or other rhythms such as specific conferences or events you organize around.
+
+In my experience so far, the six-month commitment seemed to work well.
+It was enough time to get to know each other, talk through how I can help as a mentor/be helped as a mentee, and then some months in the middle for the mentees to actually get feedback on real activities.
+
+Especially if you are starting out, you want to attract mentors.
+If there is too long of a time and effort commitment, or if there is not clear closure to a round of mentoring, many potential mentors will not join or even inquire further about your program.
+
+Making the time and effort commitment nebulous is like sprinkling mentoring repellant on your project.
+Be clear on what participants are getting into, and your mentoring program can be on a path to success.
+
+== Mentoring new community managers
+
+In the early days of open source, projects did not have community managers.
+Collaboration among developers was a given, and if you were lucky, some people in your community enjoyed tasks other than software development, like tending to infrastructure, organizing events, or leading a marketing team.
+As open source has matured, there are many more projects created from within large companies, and these things are no longer a given.
+Increasingly, people inside those companies are designated the Community Manager or Community Architect, and are tasked with ensuring that projects run well as collaborative, multi-vendor efforts.
+
+Much has been written here about what a community manager may or may not do—but if one thing is certain, it is that projects evolve, and the role of community manager evolves with them.
+In the life of a project, a time may come when the original community manager is moving on—to a different job, a different role in the project, or just taking a back seat because of life.
+ During these transition periods, a new community manager may emerge in the project.
+ During this period, it can be tempting, as the outgoing community manager, to jump in and start helping the new community person come up to speed.
+ The risk, however, is that you deprive the new person of an opportunity to make the role their own.
+ They will certainly have a different conception of the most important jobs to be done, and a different skill set to bring to bear on the project.
+As a mentor, it is important to strike a balance between being a resource, sharing relevant history, and saying how things have been done.
+
+Recently, my colleagues and I had a discussion about mentoring new community managers.
+What is the best way for more experienced community managers successfully mentor newer community managers?
+How can you help them to be successful, allowing them the very valuable space to try new things, even if they will potentially fail along the way?
+How do you balance scoping the role, while allowing them to define the role in the way that they see fit?
+
+=== Chart the waters
+
+One of the things that is most useful when you are coming into a new role is a list of the people with whom you will be working.
+If there are stakeholders who might be able to help you, or people you will work with who have concerns about community goals, this information will enable a new person to come into the role and avoid any pitfalls or faux-pas.
+As the outgoing community manager, one of the most valuable things you can do for the new community manager is to introduce them to people who you have worked with, to smooth the transition, and ensure that they don't have to spend minutes explaining who they are and why they are turning up in places where they are not expected.
+
+=== Give room to fail
+
+A common theme among people who have had bad mentorship experiences is the omnipresent micro-manager.
+One colleague described an experience where they took on a community role from someone who was stretched too thin.
+However, everything that they did in the role resulted in email correcting them and telling them how they should have done the task differently.
+As a result, they drifted away from taking on the role.
+One question more than any can make a person in a new role feel small and inadequate: "Why didn't you just…?"
+
+A new person in any role will do things differently than the person who went before.
+There can be a few reasons for that. Maybe they don't know how to do it the way it was done in the past.
+There may be reasons which led to you doing things the way you did, but they're unaware of the history.
+It's also possible that they bring a different skill set and perspective to the role, and their way is just as valid and just as good.
+Whatever the reason, avoid asking your mentee "why didn't you…?"
+
+You have to give the new person in the role the freedom to do things differently.
+Even if they make mistakes, it is important that they feel ownership over the role.
+As a mentor, one of the hardest things is to watch someone struggle to do something which you have done in the past.
+That does not mean that you should completely abandon your new community manager.
+Instead of telling them what to do, ensure that you have good documentation for tasks they will need to do in the role, and point them at the documentation.
+This gives them guided experience, will show up any places where documentation is lacking, and will also give them the freedom to tweak things along the way.
+
+=== Help them with visibility
+
+Ironically for the most public-facing people in a project, people in community roles can see their careers suffer for lack of visibility.
+More than one person I spoke to has mentioned seeing colleagues have their career suffer because their management chain was unaware of the work they were doing, or did not understand its value.
+As the experienced community manager, one of the best gifts you can offer a junior community person is being a credible cheerleader for their work.
+
+New community managers can get stretched thin, or can focus their efforts on tasks that do not provide a significant impact on the community.
+As a mentor, you have an opportunity to help them channel their efforts on aspects of the role that provide value to the sponsoring company, in addition to benefiting the community.
+You may also have the ability to communicate their successes in a way that will help their management chain understand the value that they bring to the project.
 
 == Resources: Onboarding examples from open source communities
 
