--- a/onboarding.adoc
+++ b/onboarding.adoc
@@ -30,13 +30,23 @@ All of this remains true of onboarding experiences in open source communities. I
 
 == Onboarding resources
 
-To work successfully in any asynchronous environment, one of the key tools and practices is good documentation. Since people are not typically going to have fellow community members available near them to provide guidance, it's important to have important community norms, decisions, processes, etc. well documented in much more detail when compared to a more traditionl work environment. Whether it's a landing page, project documentation, wiki page, etc., a good set of references are crucial for new community members to get familiar with the community and to get started. It's also important to ensure that the onboarding documentations are up to date and reflect the latest in the community, so you want to make it easy for anyone to help keeping the contents up to date. An easy to use documentation tool definitely helps, but what's more important is to have the community culture where a good documentations is everyone's responsibility. 
+A key tool (and practice) for working successfully in an asynchronous environment is good documentation. Since contributors won't typically have fellow community members available near them to provide impromptu guidance, it's important to have important community norms, decisions, and processes well-documented in much more detail than they might be in a more traditionl work environment. Whether it's a landing page, project documentation, wiki page, etc., a good set of references are crucial for new community members to get familiar with the community and get started. It's also important to ensure that the onboarding documentations are up to date and reflect the latest snapshot of the community's activity, so you want to make it easy for anyone to help keeping the contents up to date. An easy-to-use documentation tool definitely helps with this, but what's more important is to cultivate a community culture that impresses on everyone the need for reliable, updated documentation.
 
-Whenever people join a new community, discussions on communication channels such as mailing lists or Slack will typically be overwhelming to follow. To alleviate this, it's helpful to carve out a space for new community members as they get started. For example, dedicated channels such as "getting started" or "introductions" can be good places for people to feel safe asking newcomer questions. For more experienced community members, by helping answer questions or even simply offering encouragement on these channels will go a long way in making new community members feel welcome as they're getting started.  
+This may sound obvious, but another key resource for onboarding is other community members. Even if people do not sit in the same office, having access to experienced community members to help people get started and answer questions can help alleviate the sense of isolation in the early days. Something simple like  onboarding buddies who can jump on a welcome call may be enough for a small community that is relatively new. For larger and more established communities, people may have seen working groups focused on onboarding or even community members with formal titles such as coaches or mentors. 
 
-Once new community members feel oriented and comfortable enough to start contributing to an open source project, their next questions will be "where can I contribute?" To help newcomers get started, it's helpful to have a list of work items that people can tackle. Many communities have labels such as "good for first time contributors", "good first issue", "help wanted", etc. that people can use to narrow down the list of issues in their communities. Issues with these labels could range from documentation errors, easy bug fixes, or other simple tasks that new contributors can tackle so that they can have early successes. It's also helpful have a contact person (or people) who can serve as mentors or coaches listed on these issues in case people need help getting started. Although issues may look simple for experienced community members, that may not always be the case for many newcomers. 
+Once people resoures for onboarding are in place, this information (especially on who to reach out for help) needs to be posted in multiple places so that people feel welcome to contact their onboarding resources and feel encouraged to ask questions. If getting help is difficult, new comers will feel discouraged from engaging with the community and even decide that the community may not be for them afterall.
 
-Many open source communities organize events that community members participate in. Whether the events are in person or virtual, these events provide great opportunities for community members to collaborate synchronously and also to get to know each other in more relaxed settings. These events could be summits, hackathons, user confernces, etc. and it makes sense to create separate sessions (or even a track) for new community members. You could organize formal orientation sessions as a Day 0 event if your budget allows for it, but even a lunch time session where new comers can meet other community members so they know who they can ask questions to later on can go a long way in making community members feel welcome.
+Whether it's onboarding buddies, mentors, working groups, etc. you want to have a large enough pool of volunteers so that these volunteers don't feel burned out with onboarding activities especially as the community grows. What is important is to have a culture within the community so that there is an expectation on everyone to help welcome new community members. Ideally, what we want to see is a lot of people volunteering to help others whether or not they have a formal title as a coach or a mentor. If you have a formal program for onboarding working group, mentors, etc. you should not set a high barrier to entry for community members to become an official onboarding resource. The most important qualification should be people's willingness to help others vs. other factors such as their tenure in the community or technical expertise in the project. The people who are helping with onboarding do not need to have all the answers. Rather, they need to help newcomers find answers quicker and not work alone.
+
+== Onboarding practices
+
+When people join a new community, they may find following discussions on communication channels (such as mailing lists or Slack) to be overwhelming. To alleviate their confusion or stress, consider creating spaces in these channels specifically for new community members to use as they get started and acclimated. For example, dedicated channels such as "getting started" or "introductions" can be good places for people to feel safe asking newcomer questions. These channels also allow more experienced community members to assist with onboarding by helping answer newscomer questions or even simply by offering encouragement. It all goes a long way to making new community members feel welcome as they're getting started.
+
+Once new community members feel oriented and comfortable enough to begin contributing to an open source project, their next questions will be "Where can I contribute?"
+
+So to help newcomers get started, you may wish to develop list of work items that that new community members in particular can tackle. Many communities label issues in their issue trackers with something like "good for first time contributors," "good first issue," or "help wanted," so newscomers can more easily identify tasks with which they can help immediately. Issues with these labels could range from documentation errors, easy bug fixes, or other simple tasks that will help new contributors experience early successes and therefore build their confidence.Having a contact person (or people)  servinvg as mentors or coaches listed on these issues (in case people need help getting started) can also be helpful (more on this at the end of this chapter). Always remember: Issues that may seem simple to experienced community members might not be as simple for newcomers.
+
+Many open source communities organize events aimed at connecting their members. Whether the events are collocated or virtual, they  provide excellent opportunities for community members to collaborate synchronously—and get to know each other in the process. These events could be summits, hackathons, user confernces, etc. At these events, consider creating special programming or spaces for new community members. You might organize formal orientation sessions as a "Day 0" event if your budget allows for it, even a lunchtime session at which newcomers can meet other community members so they know who they can ask questions to later on.
 
 == Contributor pathways
 
@@ -66,14 +76,6 @@ Does your project currently offer new (and existing) contributors opportunities 
 
 Again, ask yourself: Does your project currently offer new (and existing) contributors opportunities to contribute rewardingly to (or even take ownership of) work in each of these pathways?
 
-
-== People to help with onboarding
-
-This may sound obvious, but another key resource for onboarding is other community members. Even if people do not sit in the same office, having access to experienced community members to help people get started and answer questions can help alleviate the sense of isolation in the early days. Something simple like  onboarding buddies who can jump on a welcome call may be enough for a small community that is relatively new. For larger and more established communities, people may have seen working groups focused on onboarding or even community members with formal titles such as coaches or mentors. 
-
-Once people resoures for onboarding are in place, this information (especially on who to reach out for help) needs to be posted in multiple places so that people feel welcome to contact their onboarding resources and feel encouraged to ask questions. If getting help is difficult, new comers will feel discouraged from engaging with the community and even decide that the community may not be for them afterall.
-
-Whether it's onboarding buddies, mentors, working groups, etc. you want to have a large enough pool of volunteers so that these volunteers don't feel burned out with onboarding activities especially as the community grows. What is important is to have a culture within the community so that there is an expectation on everyone to help welcome new community members. Ideally, what we want to see is a lot of people volunteering to help others whether or not they have a formal title as a coach or a mentor. If you have a formal program for onboarding working group, mentors, etc. you should not set a high barrier to entry for community members to become an official onboarding resource. The most important qualification should be people's willingness to help others vs. other factors such as their tenure in the community or technical expertise in the project. The people who are helping with onboarding do not need to have all the answers. Rather, they need to help newcomers find answers quicker and not work alone.
 
 == Mentorship
 
