--- a/measuring_success_section.adoc
+++ b/measuring_success_section.adoc
@@ -5,8 +5,8 @@
 // Status: DRAFT
 // :leveloffset: +1
 
-In the days before open source, measuring the success of a software project was often defined in strictly financial terms.
-How many boxes--yes, boxes--of software did a company sell? That revenue was offset by the cost of support, authoring, and distribution (again, boxes), and voila! The profit was the measure of success.
+In the days before open source, measuring the success of a software effort was often defined in strictly financial terms.
+How many boxes—yes, boxes—of software did a company sell? That revenue was offset by the cost of support, authoring, and distribution (again, boxes), and voila! The profit was the measure of success.
 
 In the open source world, it doesn't quite work like that.
 For one thing, while there are commercially successful open source projects, the success of those projects is still not strictly tied to just the financials.
@@ -18,7 +18,7 @@ Conversely, there are many very successful projects that don't have the headline
 
 So, if money and fame are not the success factors in open source software projects, what are?
 
-For open source projects, success is not just measured in terms of commercial or consumptiove success.
+For open source projects, success is not just measured in terms of commercial or consumptive success.
 Free and open source projects have become much more transparently developed thanks to the popularity of distributed version control and collaboration tools.
 While these tools, such as the ones based on git, have certainly given contributors a big advantage in putting projects together, another benefit is that they also allow a much more robust and quantitative observation of how projects are doing.
 
@@ -26,21 +26,22 @@ In the past, it was difficult to see in real time if the processes of a given pr
 You would see the output of a project's efforts, but not the steps the process took along the way to get there.
 At least, not without a lot of effort.
 So establishing a project's health and success was done more with subjective methods, often based on sociological and business-oriented principles that have become ingrained in many cultures.
-Now, though, one can easily dive into the data shown by open development, and use  that data to derive quantiative information about a project's health.
-It will be these concepts that this section will explore.
+Now, though, one can easily dive into the data shown by open development, and use that data to derive quantitative information about a project's health.
+It is these concepts that this section explores.
 
 This section contains chapters that:
 
-* Discuss the formation of healthy, paricipatory communities
-* Examine how metrics can be applied to projects
-* Determine which metrics will be the most useful for a project
-* Highlight ways to increase participation in a project's announcements
+* Discuss the formation of healthy, participatory communities.
+* Examine how metrics can be applied to projects.
+* Determine which metrics will be the most useful for a project.
+* Highlight ways to increase participation in a project's announcements.
 
 This section is useful for you if:
 
-* Want to know if your community is healthy
-* Are seeking data that can demonstrate successes and failures
-* Need more contributors in your project
+* Want to know if your community is healthy.
+* Are seeking data that can demonstrate successes and failures.
+* Need more contributors in your project.
+* You have read this far, why stop now?
 
 include::Guiding participants[]
 include::developing_a_metrics_plan.adoc[]
