Updating author designation
Technically, I did not author this material, so I'd like to avoid taking credit for great stuff that really isn't mine.

--- a/create_a_culture_of_mentorship.adoc
+++ b/create_a_culture_of_mentorship.adoc
@@ -1,5 +1,5 @@
 = Creating a Culture of Mentorship
-// Authors: Karsten Wade <kwade@redhat.com>, Guedis Cardenas <guedis@palante.co>, Ray Paik <ray@cube.dev>, Bryan Behrenshausen <bbehrens@redhat.com>
+// Authors: Karsten Wade <kwade@redhat.com>, Guedis Cardenas <guedis@palante.co>, Ray Paik <ray@cube.dev>
 // Updated: 2020-12-10
 // Versions: 2.0
 // Status: DRAFT
