Add drafted material on contributor pathways

--- a/onboarding.adoc
+++ b/onboarding.adoc
@@ -4,13 +4,11 @@ Updated: 2020-12-xx
 
 == Introduction
 
-Contributors are the lifeblood of any open source project. Any project not continually welcoming new participants might find itself stagnating—or, worse, falling apart.
+Contributors are the lifeblood of any open source project. A project not continually welcoming new participants might find itself stagnating—or, worse, falling apart.
 
-So any open source project desiring long-term sustainability should think deliberately about the ways it connects with, greets, and acclimates—in a word, how it "onboards"—new contributors. A well-designed onboarding process makes contributing to your project easier for participants, and it empowers contributors to positively impact the the work as quickly as possible.
+So any open source project desiring long-term sustainability should think seriously about the ways it connects with, greets, and acclimates—in a word, how it "onboards"—new contributors. A well-designed onboarding process makes contributing to your project easier for participants, and it empowers contributors to positively impact the the work as quickly as possible.
 
-In this chapter, we'll discuss ...
-
-xxx
+In this chapter, we'll discuss the importance of your community's onboarding experience and examine some common onboarding resources and practices that may help your project become more sustainable.
 
 == The importance of an onboarding experience
 
@@ -24,7 +22,7 @@ All of this remains true of onboarding experiences in open source communities. I
 
 *An asynchronous and remote environment.* One of the great perks of a traditional office environment is that you  are close to your co-workers and managers for face to face interactions and you can find them for quick questions. In contrast, when you join a new open source community, you will likely work with community members in different georgraphies and time zones. So unless there are good onboarding materials such as documentation, video tutorials, wiki pages, and other resources, it's going to be more challenging to get started in open source communties even for experienced self starters. 
 
-*Imposter syndrome.*  When it's more difficult to get real time help or feedback, people can easily get stuck with simple tools issues and feel less confident about their work. So a good onboarding experience in open source communities is crucial for newcomers not to feel discouraged in their early days in the community. 
+*Imposter syndrome.*  When it's more difficult to get real time help or feedback, people can easily get stuck with simple tools issues and feel less confident about their work. So a good onboarding experience in open source communities is crucial for newcomers not to feel discouraged in their early days in the community.
 
 *Significant variability.* No two open source communities are the same. Even for seasoned open source contributors, when they join a new community they will need to get familiar with new tools, new processes, and even new terminologies. Depending on the community, seemingly terms like contributions, community members, projects, upstream, etc. may mean something slightly different and can easily cause confusion for new community members.   
 
@@ -46,13 +44,17 @@ Once new community members feel oriented and comfortable enough to begin contrib
 
 So to help newcomers get started, you may wish to develop list of work items that that new community members in particular can tackle. Many communities label issues in their issue trackers with something like "good for first time contributors," "good first issue," or "help wanted," so newscomers can more easily identify tasks with which they can help immediately. Issues with these labels could range from documentation errors, easy bug fixes, or other simple tasks that will help new contributors experience early successes and therefore build their confidence.Having a contact person (or people)  servinvg as mentors or coaches listed on these issues (in case people need help getting started) can also be helpful (more on this at the end of this chapter). Always remember: Issues that may seem simple to experienced community members might not be as simple for newcomers.
 
-Many open source communities organize events aimed at connecting their members. Whether the events are collocated or virtual, they  provide excellent opportunities for community members to collaborate synchronously—and get to know each other in the process. These events could be summits, hackathons, user confernces, etc. At these events, consider creating special programming or spaces for new community members. You might organize formal orientation sessions as a "Day 0" event if your budget allows for it, even a lunchtime session at which newcomers can meet other community members so they know who they can ask questions to later on.
+Many open source communities organize events aimed at connecting their members. Whether the events are collocated or virtual, they provide excellent opportunities for community members to collaborate synchronously—and get to know each other in the process. These events could be summits, hackathons, user confernces, etc. At these events, consider creating special programming or spaces for new community members. You might organize formal orientation sessions as a "Day 0" event if your budget allows for it, even a lunchtime session at which newcomers can meet other community members so they know who they can ask questions to later on.
 
 == Contributor pathways
 
-Opportunities for volunteers to begin lending their unique talents to an open source project are called that project's contributor pathways. The greater the number of contributor pathways your project features, the more likely it is to recruit participants with the various skills required for project success.  
+Once new contributors have made their initial contributions to your project, they'll begin looking for ways to make more significant impacts. To do this, they'll often look for ways they can apply their specific skills and talents to the project.
 
-=== Typical contributor pathways (community focus)
+Opportunities for volunteers to begin lending their unique talents to an open source project are called that project's "contributor pathways." The greater the number of contributor pathways your project features, the more likely it is to recruit participants with the various skills required for the project's success.
+
+Your project will have any number of contributor pathways specific to it, but these pathways will generally fall into two basic categories: pathways with a community focus and those with a technical focus.
+
+_Community-focused_ pathways are opportunities for contribution that may not require specialized technical knowledge on the part of participants. These are pathways focused on helping new contributors document the project, raise awareness of and market the project, plan community meetings and events, etc.—all extraordinarily important aspects of a project's eventual success. Examples include:
 
 . Documenting workflow and governance processes
 . Onboarding and mentoring new members
@@ -61,9 +63,7 @@ Opportunities for volunteers to begin lending their unique talents to an open so
 . Managing social media
 . Organizing events
 
-Does your project currently offer new (and existing) contributors opportunities to contribute rewardingly to (or even take ownership of) work in each of these pathways?
-
-=== Typical community pathways (technical focus)
+_Technically focused_ contributor pathways, on the other hand are contributions requiring specialized knowledge of software development (often in a particular computing language). These pathways are focused on enchancing or refining the body of software a community maintains. Examples include:
 
 . Adding new features and documentation
 . Fixing existing bugs and triaging issues
@@ -74,8 +74,9 @@ Does your project currently offer new (and existing) contributors opportunities 
 . Creating and maintaining project roadmap
 . Code and user interface localization
 
-Again, ask yourself: Does your project currently offer new (and existing) contributors opportunities to contribute rewardingly to (or even take ownership of) work in each of these pathways?
+When assessing your project's contributor pathways, ask yourself: Does your project currently offer new (and existing) contributors opportunities to contribute rewardingly to (or even take ownership of) work in each of these areas? If not, one general way to begin expanding your project is by making concerted efforts to formalize, refine, document, and advertise these contributor pathways.
 
+We call these "pathways" because they allow participants to deepen investment in the community _gradually_ so they don't feel overwhelemed and can acclimate themselves to the project's processes and culture as they become more involved. Ideally, as your community matures, it will construct pathways that incrementally confer more responsibility and authority on contributors. Contributors following your project's contributor pathway related to events, for example, probably won't get started by taking sole responsibility for your community's flagship annual event. But they might work with experienced community members on planning that event, taking change of securing a venue, advertising, registration, and more.
 
 == Mentorship
 
